examples/test/testpolicy19935.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19935
  namespace: namespace244
spec:
  podSelector:
    matchLabels:
      key43: value7
      key23: value40
      key38: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value46
          key42: value31
          key19: value23
